Small addition to our page content

--- a/site/index.html
+++ b/site/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> Hola Coursera!</title>
-<h1 style="color: red">Blacky</h1>
 </head>
-</html>
+<body>
+<h1 style="color: red">Hello Coursera! It´s a great course!</h1>
+</body>
+</html> 
