--- a/Propuesta/index.html
+++ b/Propuesta/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="imagen">
-        <img src="/perrito.png" alt="">
+        <img src="https://github.com/Tralph89/coursera-test/blob/gh-pages/Propuesta/perrito.png" alt="">
     </div>
     
 
