--- a/Propuesta/index.html
+++ b/Propuesta/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,9 +18,11 @@
     </div>
 
     <div class="imagen">
-        <img src="https://github.com/Tralph89/coursera-test/blob/gh-pages/Propuesta/perrito.png" alt="">
+        <img src="https://github.com/Tralph89/coursera-test/blob/gh-pages/Propuesta/1200px-Heart_coraz%C3%B3n.svg.png?raw=true" alt="">
     </div>
-    
+<!--
+    <img class="corazon" src="https://github.com/Tralph89/coursera-test/blob/gh-pages/Propuesta/1200px-Heart_coraz%C3%B3n.svg.png?raw=true" alt="">
+    -->
 
     <script src="js/app.js"></script>
 </body>
