--- a/Propuesta/index.html
+++ b/Propuesta/index.html
@@ -20,6 +20,7 @@
     <div class="imagen">
         <img src="https://github.com/Tralph89/coursera-test/blob/gh-pages/Propuesta/1200px-Heart_coraz%C3%B3n.svg.png?raw=true" alt="">
     </div>
+    <img src="https://github.com/Tralph89/coursera-test/blob/gh-pages/Propuesta/Blacky.jpg?raw=true" alt="">
 <!--
     <img class="corazon" src="https://github.com/Tralph89/coursera-test/blob/gh-pages/Propuesta/1200px-Heart_coraz%C3%B3n.svg.png?raw=true" alt="">
     -->
